Prevent overflow on small screens

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -10658,6 +10658,10 @@ section:not(.back-gradient) h1 {
   box-shadow: 7px 7px 0px 0px #63D3FD;
 }
 
+#app {
+  overflow-x: hidden;
+}
+
 #app-content {
   min-height: 100vh;
 }
