--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10650,6 +10650,10 @@ a.text-dark:focus {
   box-shadow: 7px 7px 0px 0px #63D3FD;
 }
 
+#app {
+  overflow-x: hidden;
+}
+
 #app-content {
   min-height: 100vh;
 }
